--- a/lib/l10n/untranslated_messages.txt
+++ b/lib/l10n/untranslated_messages.txt
@@ -21,7 +21,6 @@
     "chooseFromGallery",
     "uploadProfilePhoto",
     "waitingForResponse",
-    "requestNotFound",
     "yourRequest",
     "waitingForDrivers",
     "driversWillRespondSoon",
@@ -47,7 +46,6 @@
     "rejectOffer",
     "areYouSureRejectOffer",
     "driverInformation",
-    "vehicleNumber",
     "callDriver",
     "cancelRequest",
     "areYouSureCancelRequest",
@@ -97,7 +95,54 @@
     "enterpriseDescription",
     "driverDescription",
     "update",
-    "vehicleCountUpdate"
+    "vehicleCountUpdate",
+    "noBookings",
+    "acceptedOffersWillAppearHere",
+    "assignedDriver",
+    "assignDriversVehiclesRequired",
+    "completeAssignmentRemaining",
+    "editAssignment",
+    "dispatchBooking",
+    "editDriverVehicleAssignment",
+    "assignDriversVehicles",
+    "onlyVehiclesOfTypeShown",
+    "editAssignmentForVehicles",
+    "assignDriversAndVehicles",
+    "chooseDriver",
+    "chooseVehicle",
+    "pleaseSelectDriverAndVehicleForAllAssignments",
+    "updateAssignment",
+    "assignAll",
+    "errorLoadingDriversVehicles",
+    "noActiveDriversAvailable",
+    "noActiveVehiclesOfTypeAvailable",
+    "noActiveVehiclesAvailable",
+    "notEnoughAvailableDrivers",
+    "notEnoughAvailableVehicles",
+    "driversAndVehiclesAssignedSuccessfully",
+    "errorAssigningDriversVehicles",
+    "notifyCustomer",
+    "doYouWantToNotifyCustomer",
+    "yesNotify",
+    "vehiclesAndDriversAssignedToCargo",
+    "customerHasBeenNotified",
+    "errorSendingNotification",
+    "cannotAssignInactiveDriver",
+    "cannotAssignInactiveVehicle",
+    "pleaseAssignAllVehiclesBeforeDispatching",
+    "pleaseWaitForAllDriversToAccept",
+    "pleaseWaitForAllDriversToStartJourney",
+    "areYouSureDispatchBooking",
+    "dispatch",
+    "bookingDispatchedSuccessfully",
+    "errorDispatchingBooking",
+    "enterpriseCancelledBooking",
+    "errorCancellingBooking",
+    "offerType",
+    "counterOffer",
+    "acceptance",
+    "acceptedAt",
+    "plate"
   ],
 
   "ur": [
@@ -122,7 +167,6 @@
     "chooseFromGallery",
     "uploadProfilePhoto",
     "waitingForResponse",
-    "requestNotFound",
     "yourRequest",
     "waitingForDrivers",
     "driversWillRespondSoon",
@@ -148,7 +192,6 @@
     "rejectOffer",
     "areYouSureRejectOffer",
     "driverInformation",
-    "vehicleNumber",
     "callDriver",
     "cancelRequest",
     "areYouSureCancelRequest",
@@ -198,6 +241,53 @@
     "enterpriseDescription",
     "driverDescription",
     "update",
-    "vehicleCountUpdate"
+    "vehicleCountUpdate",
+    "noBookings",
+    "acceptedOffersWillAppearHere",
+    "assignedDriver",
+    "assignDriversVehiclesRequired",
+    "completeAssignmentRemaining",
+    "editAssignment",
+    "dispatchBooking",
+    "editDriverVehicleAssignment",
+    "assignDriversVehicles",
+    "onlyVehiclesOfTypeShown",
+    "editAssignmentForVehicles",
+    "assignDriversAndVehicles",
+    "chooseDriver",
+    "chooseVehicle",
+    "pleaseSelectDriverAndVehicleForAllAssignments",
+    "updateAssignment",
+    "assignAll",
+    "errorLoadingDriversVehicles",
+    "noActiveDriversAvailable",
+    "noActiveVehiclesOfTypeAvailable",
+    "noActiveVehiclesAvailable",
+    "notEnoughAvailableDrivers",
+    "notEnoughAvailableVehicles",
+    "driversAndVehiclesAssignedSuccessfully",
+    "errorAssigningDriversVehicles",
+    "notifyCustomer",
+    "doYouWantToNotifyCustomer",
+    "yesNotify",
+    "vehiclesAndDriversAssignedToCargo",
+    "customerHasBeenNotified",
+    "errorSendingNotification",
+    "cannotAssignInactiveDriver",
+    "cannotAssignInactiveVehicle",
+    "pleaseAssignAllVehiclesBeforeDispatching",
+    "pleaseWaitForAllDriversToAccept",
+    "pleaseWaitForAllDriversToStartJourney",
+    "areYouSureDispatchBooking",
+    "dispatch",
+    "bookingDispatchedSuccessfully",
+    "errorDispatchingBooking",
+    "enterpriseCancelledBooking",
+    "errorCancellingBooking",
+    "offerType",
+    "counterOffer",
+    "acceptance",
+    "acceptedAt",
+    "plate"
   ]
 }
